log/build_2023-11-09_13-03-39/mypkg/stderr.log
  File "/home/akito/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 1
    1 import rclpy                     #ROS2のクライアントのためのライブラリ
      ^
SyntaxError: invalid syntax

